--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,9 +1,16 @@
+@use '../../styles/colors.scss' as colors;
+
 .input-container {
   padding: 6px 12px;
   border-radius: 3px;
-  border: solid 1px gray;
+  border: solid 2px colors.$primary-dark;
+  background-color: #ede7f6;
   outline: none;
   box-shadow: none;
   font-size: 12px;
   line-height: 1;
+
+  &:hover {
+    border-color: rgba(colors.$primary-dark, 0.9);
+  }
 }
